0.13.2.AP (PRE-RELEASE):
-----------------------
- Adds `IconRowMove` Feature
  * Allows repositioning the icon row position on the RefindPlus screen
    - Sometimes needed when icons block parts of custom banners
  * Base position can be specified using a new `icon_row_move` configuration token
- Adds `IconRowTune` Feature
  * Allows finetuning the adjusting the `IconRowMove` position
  * Offset value can be specified using a new `icon_row_tune` configuration token
- Adds `DriverPriority` Feature
  * Asigns a higher priority to drivers loaded by RefindPlus
  * Ensures that such are loaded when other similar drivers exist (mainly in the firmware)
  * Currently tied to the `RansomDrives` Feature and only activated when that feature is active
- Adds `RansomDrives` Feature
  * Some types of firmware, notably on HP Notebooks, may lock some partitions
    - This renders them inaccessible or may even lead to RefindPlus hanging
  * Such partitions can be unlocked by setting a new `ransom_drives` configuration token
  * This option is currently always disabled on Apple firmware
- Adds `RescanDrivers` Feature
  * Controls scanning for newly revealed DXE drivers when connecting handles
    - Switch on or off with a new `rescan_drivers` configuration token
  * This was previously done by default but may negatively impact loading speed
  * Should only be activated when specifically required
    - Should not be required on most firmware
  * This option is currently always disabled on Apple firmware
- Adds `HaltSeconds` Function
  * Works as `PauseSeconds` does, but does not terminate on keypress
- Fixes Unicode Collation
  * Now checks for and uses Unicode Collation Protocol instances that support English
  * Previously simply selected the first instance found (Inherited)
  * This should allow proper support for languages using unicode text
- Improves `TransientBoot` Feature
  * Now removes pre-existing `PreviousBoot` instances when booting with this option set