@@ -65,6 +65,7 @@ decline_nvmeload      |Disables the built in NvmExpress Driver
 decline_nvramprotect  |Disables feature that blocks UEFI Windows certificates on Apple NVRAM
 decline_reloadgop     |Disables reinstallation of UEFI 2.x GOP drivers on EFI 1.x units
 decline_tagshelp      |Disables feature that ensures hidden tags can always be unhidden
+decline_texthelp      |Disables complementary text colours if not required
 decline_uefiemulate   |Disables feature that emulates UEFI 2.x support on EFI 1.x units
 disable_amfi          |Disables AMFI Checks on MacOS if required
 disable_compat_check  |Disables Mac version compatibility checks if required
